--- a/ogenix/files/about.html
+++ b/ogenix/files/about.html
@@ -78,7 +78,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/aboutusbackground.jpg)">
             </div>
             <div class="page-header__ripped-paper"
                 style="background-image: url(assets/images/shapes/page-header-ripped-paper.png);"></div>
@@ -89,7 +89,7 @@
                         <li><span>/</span></li>
                         <li>About</li>
                     </ul>
-                    <h2>About us</h2>
+                    <h2>About Us</h2>
                 </div>
             </div>
         </section>
@@ -109,21 +109,16 @@
                                 <span class="section-title__tagline">Get to Know us</span>
                                 <h2 class="section-title__title">De'Sauge</h2>
                             </div>
-                            <p class="about-three__text-1">We connect buyers and sellers of natural, organic products
-                                who are so beguiled demoralized charms of pleasure.</p>
-                            <p class="about-three__text-2">Aliquam viverra arcu. Donec aliquet blandit enim. Suspendisse
-                                id quam sed eros tincidunt luctus sit amet eu nibh egestas tempus turpis, sit amet
-                                mattis magna varius non.</p>
+                            <p class="about-three__text-1">De'Sauge is a company on a mission to revolutionize the world of sausages, but with a plant-based twist!</p>
+                            <p class="about-three__text-2">We offer delicious and satisfying sausages made with high-quality ingredients, perfect for those who want to enjoy the taste and texture of sausage without the meat.</p>
                             <ul class="about-three__points list-unstyled">
                                 <li>
                                     <div class="about-three__count"></div>
-                                    <p class="about-three__text">Local growth
-                                        <br> of fresh food</p>
+                                    <p class="about-three__text">Flavorful and Diverse</p>
                                 </li>
                                 <li>
                                     <div class="about-three__count"></div>
-                                    <p class="about-three__text">Healthy food
-                                        <br> everyday</p>
+                                    <p class="about-three__text">Convenient and Versatile</p>
                                 </li>
                             </ul>
                         </div>
@@ -136,23 +131,7 @@
                                     <img src="assets/images/shapes/about-three-shape-1.png" alt="">
                                 </div>
                                 <div class="about-three__img">
-                                    <img src="assets/images/resources/about-three-img-1.jpg" alt="">
-                                </div>
-                                <div class="about-three__experience">
-                                    <div class="about-three__experience-shape-1">
-                                        <img src="assets/images/shapes/about-three-experience-shape-1.png" alt="">
-                                    </div>
-                                    <div class="about-three__experience-inner">
-                                        <div class="about-three__experience-shape-2">
-                                            <img src="assets/images/shapes/about-three-experience-shape-2.png" alt="">
-                                        </div>
-                                        <div class="about-three__experience-year">
-                                            <h3>18</h3>
-                                        </div>
-                                        <div class="about-three__experience-text">
-                                            <p>Years of <br> experience</p>
-                                        </div>
-                                    </div>
+                                    <img src="assets/images/mockups/sausagesjejer3-removebg.png" alt="" width="450" height="350">
                                 </div>
                             </div>
                         </div>
@@ -167,63 +146,6 @@
        <!--Site Footer End-->
 
     </div><!-- /.page-wrapper -->
-
-
-    <div class="mobile-nav__wrapper">
-        <div class="mobile-nav__overlay mobile-nav__toggler"></div>
-        <!-- /.mobile-nav__overlay -->
-        <div class="mobile-nav__content">
-            <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
-
-            <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="104"
-                        alt="" /></a>
-            </div>
-            <!-- /.logo-box -->
-            <div class="mobile-nav__container"></div>
-            <!-- /.mobile-nav__container -->
-
-            <ul class="mobile-nav__contact list-unstyled">
-                <li>
-                    <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@ogenix.com</a>
-                </li>
-                <li>
-                    <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
-                </li>
-            </ul><!-- /.mobile-nav__contact -->
-            <div class="mobile-nav__top">
-                <div class="mobile-nav__social">
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
-                    <a href="#" class="fab fa-pinterest-p"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
-            </div><!-- /.mobile-nav__top -->
-
-
-
-        </div>
-        <!-- /.mobile-nav__content -->
-    </div>
-    <!-- /.mobile-nav__wrapper -->
-
-    <div class="search-popup">
-        <div class="search-popup__overlay search-toggler"></div>
-        <!-- /.search-popup__overlay -->
-        <div class="search-popup__content">
-            <form action="#">
-                <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
-                <button type="submit" aria-label="search submit" class="thm-btn">
-                    <i class="icon-magnifying-glass"></i>
-                </button>
-            </form>
-        </div>
-        <!-- /.search-popup__content -->
-    </div>
-    <!-- /.search-popup -->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="icon-up-arrow"></i></a>
 
