--- a/ogenix/files/header.html
+++ b/ogenix/files/header.html
@@ -13,20 +13,17 @@
                                     <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                     <ul class="main-menu__list">
                                         <li class="dropdown current megamenu">
-                                            
-                                        <li class="dropdown">
-                                            <a href="#">About</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="about.html">About</a></li>
-                                                <li><a href="team.html">Our Team</a></li>
-                                            </ul>
+                                        <li>
+                                            <a href="about.html">About</a>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#">Information</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="testimonials.html">Testimonials</a></li>
-                                                <li><a href="faq.html">FAQs</a></li>
-                                            </ul>
+                                        <li>
+                                            <a href="team.html">Our Team</a>
+                                        </li>
+                                        <li>
+                                            <a href="testimonials.html">Testimonials</a>
+                                        </li>
+                                        <li>
+                                            <a href="faq.html">FAQs</a>
                                         </li>
                                         <li>
                                             <a href="contact.html">Contact</a>
