--- a/ogenix/files/team.html
+++ b/ogenix/files/team.html
@@ -75,7 +75,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/ucbackground.jpg)">
             </div>
             <div class="page-header__ripped-paper"
                 style="background-image: url(assets/images/shapes/page-header-ripped-paper.png);"></div>
@@ -107,7 +107,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/lucaskevin.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -139,7 +139,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/marvelwibawa.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Marvel</a></h3>
+                                    <h3 class="team-two__title"><a href="team.html">Marvel Wibawa</a></h3>
                                     <p class="team-two__sub-title">CFO</p>
                                 </div>
                                 <div class="team-two__social-box">
@@ -171,7 +171,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/jessicaputri.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Jessica</a></h3>
+                                    <h3 class="team-two__title"><a href="team.html">Jessica Putri</a></h3>
                                     <p class="team-two__sub-title">COO</p>
                                 </div>
                                 <div class="team-two__social-box">
@@ -203,7 +203,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/charlenecayliani.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +235,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/nathaliejean.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -281,7 +281,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/drannachen.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -293,11 +293,8 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Dr.</a></h3>
-                                    <p class="team-two__sub-title">CEO</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <h3 class="team-two__title"><a href="team.html">Dr. Anna Chen</a></h3>
+                                    <p class="team-two__sub-title">Nutritionist</p>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +310,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/drsarahkim.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -325,11 +322,8 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Dr.</a></h3>
-                                    <p class="team-two__sub-title">CFO</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <h3 class="team-two__title"><a href="team.html">Dr. Sarah Kim</a></h3>
+                                    <p class="team-two__sub-title">Cardiologist</p>
                                 </div>
                             </div>
                         </div>
@@ -345,7 +339,7 @@
                                 <div class="team-two__shape-1">
                                     <img src="assets/images/shapes/team-two-shape-1.png" alt="">
                                     <div class="team-two__img">
-                                        <img src="assets/images/team/team-2-1.jpg" alt="">
+                                        <img src="assets/images/people/drstevennelson.jpg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -357,11 +351,8 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Dr.</a></h3>
-                                    <p class="team-two__sub-title">CFO</p>
-                                </div>
-                                <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <h3 class="team-two__title"><a href="team.html">Dr. Steven Nelson</a></h3>
+                                    <p class="team-two__sub-title">Food Scientist & Culinary Researche</p>
                                 </div>
                             </div>
                         </div>
@@ -382,61 +373,6 @@
     </div><!-- /.page-wrapper -->
 
 
-    <div class="mobile-nav__wrapper">
-        <div class="mobile-nav__overlay mobile-nav__toggler"></div>
-        <!-- /.mobile-nav__overlay -->
-        <div class="mobile-nav__content">
-            <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
-
-            <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="104"
-                        alt="" /></a>
-            </div>
-            <!-- /.logo-box -->
-            <div class="mobile-nav__container"></div>
-            <!-- /.mobile-nav__container -->
-
-            <ul class="mobile-nav__contact list-unstyled">
-                <li>
-                    <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@ogenix.com</a>
-                </li>
-                <li>
-                    <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
-                </li>
-            </ul><!-- /.mobile-nav__contact -->
-            <div class="mobile-nav__top">
-                <div class="mobile-nav__social">
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
-                    <a href="#" class="fab fa-pinterest-p"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
-            </div><!-- /.mobile-nav__top -->
-
-
-
-        </div>
-        <!-- /.mobile-nav__content -->
-    </div>
-    <!-- /.mobile-nav__wrapper -->
-
-    <div class="search-popup">
-        <div class="search-popup__overlay search-toggler"></div>
-        <!-- /.search-popup__overlay -->
-        <div class="search-popup__content">
-            <form action="#">
-                <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
-                <button type="submit" aria-label="search submit" class="thm-btn">
-                    <i class="icon-magnifying-glass"></i>
-                </button>
-            </form>
-        </div>
-        <!-- /.search-popup__content -->
-    </div>
-    <!-- /.search-popup -->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="icon-up-arrow"></i></a>
 
