--- a/ogenix/files/testimonials.html
+++ b/ogenix/files/testimonials.html
@@ -78,7 +78,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/testimonialbackground.jpg)">
             </div>
             <div class="page-header__ripped-paper"
                 style="background-image: url(assets/images/shapes/page-header-ripped-paper.png);"></div>
@@ -103,17 +103,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>De'Sauge is a lifesaver!  These plant-based sausages are delicious and pack a protein punch. Perfect for anyone looking for a healthy and flavorful alternative to meat.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Kevin martin</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name">Michael David Sin</h4>
+                                <p class="testimonial-two__client-sub-title">Business Man</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
+                                    <img src="assets/images/people/michaeldavidsin.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -126,17 +124,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>Wow! De'Sauge sausages is a flavor explosion!  Can't believe it's plant-based.  Now I can finally have delicious sausages guilt-free!</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Nadhia brava</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name">Bridget Beatrix</h4>
+                                <p class="testimonial-two__client-sub-title">College Student</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
+                                    <img src="assets/images/people/bridgetbeatrix.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -149,17 +145,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>Switched to De'Sauge sausages for BBQs and haven't looked back!  Everyone loves them, even the meat-eaters.  Tastes amazing and cooks up perfectly on the grill.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Thomas born</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name">Cliffton Wijaya</h4>
+                                <p class="testimonial-two__client-sub-title">Athlete</p>
                             </div>
-                            <div class="testimonial-two__img-box">
-                                <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
+                            <div class=" testimonial-two__img-box">
+                                <div class=" testimonial-two__img">
+                                    <img class = "circular-frame" src="assets/images/people/clifftonwijaya.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -174,7 +168,7 @@
         <!--Testimonials Page End-->
 
         <div class="section-title text-center">
-            <h2 class="section-title__title">Let hear the testimonials from our
+            <h2 class="section-title__title">Let's hear the testimonials from our
                 <br>Experts</h2>
         </div>
 
@@ -186,17 +180,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>De'Sauge sausages are a delicious innovation! They offer a satisfying plant-based option with great texture and protein content. A perfect choice for health-conscious consumers.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Kevin martin</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name"> Dr. Anna Chen</h4>
+                                <p class="testimonial-two__client-sub-title">Nutritionist</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-1.jpg" alt="">
+                                    <img src="assets/images/people/drannachen-copy.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -209,17 +201,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>De'Sauge is a plant-based dream come true! Finally, a sausage that satisfies my cravings without the meat. Perfect for a quick and delicious breakfast.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Nadhia brava</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name">Dr. Sarah Kim</h4>
+                                <p class="testimonial-two__client-sub-title">Cardiologist</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-2.jpg" alt="">
+                                    <img src="assets/images/people/drsarahkim-copy.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -232,17 +222,15 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <div class="testimonial-two__single">
                             <div class="testimonial-two__content-box">
-                                <p>Lorem ipsum is simply free text dolor not sit amet, consectetur notted
-                                    adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
-                                    text.</p>
+                                <p>De'Sauge's variety is amazing! From classic flavors to unique options like Hot & Spicy Jalapeño, there's something for everyone.  These plant-based sausages are a perfect way to explore exciting culinary adventures.</p>
                             </div>
                             <div class="testimonial-two__client-info">
-                                <h4 class="testimonial-two__client-name">Thomas born</h4>
-                                <p class="testimonial-two__client-sub-title">Customer</p>
+                                <h4 class="testimonial-two__client-name">Dr. Steven Nelson</h4>
+                                <p class="testimonial-two__client-sub-title">Food Scientist & Culinary Researcher</p>
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/testimonial/testimonial-2-3.jpg" alt="">
+                                    <img src="assets/images/people/drstevennelson-copy.jpg" alt="">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
